Fixed a bugging (me) overflow issue

--- a/src/components/notFinishedNotice.css
+++ b/src/components/notFinishedNotice.css
@@ -6,11 +6,10 @@
   color: rgb(180, 185, 196);
   border: 0.3vmin solid aliceblue;
   width: 54.5vmin;
-  height: 14vmin;
-  font-size: 2.5vmin;
+  font-size: 2.4vmin;
   border-bottom-left-radius: 3vmin;
   border-bottom-right-radius: 3vmin;
   text-align: center;
-  padding: 0.5vmin 0;
-  overflow-y: auto;
+  padding: 1vmin 0.5vmin 1.5vmin 0.5vmin;
+  overflow: hidden;
 }
